--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image update</title>
+    <title>Image update - Download</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 </head>
 <body>
-   <h1>Image update</h1>
-   <h3>Convert .jpg files to higher-resolution png</h3>
+   <h1 align="center">Enjoy your images!</h1>
 
-   <a href="upload"><button type="button">Start</button></a>
+   <a href="/"><button type="button" value="clear">Update more images</button></a>
 </body>
 </html>
