--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -8,8 +8,8 @@
 <body>
   <form method=post enctype=multipart/form-data>
     <div>
-      <label for="image_uploads">Choose images to upload (PNG, JPG)</label>
-      <input type="file" id="image_uploads" name="image_uploads" accept=".jpg, .jpeg, .png" multiple>
+      <label for="file">Choose images to upload (PNG, JPG)</label>
+      <input type="file" id="file" name="file" accept=".jpg, .jpeg, .png" multiple>
     </div>
     <div class="preview">
       <p>No files currently selected for upload</p>
