open cv espcn addition, working

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Complete file example</title>
+  <title>Image Better Upper</title>
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 
 </head>
