--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -9,17 +9,22 @@
   <form method=post enctype=multipart/form-data>
     <div>
       <label for="file">Choose images to upload (PNG, JPG)</label>
-      <input type="file" id="file" name="file" accept=".jpg, .jpeg, .png" multiple>
+      <input type="file" id="file" name="file" onchange="showButton()" accept=".jpg, .jpeg, .png" multiple>
     </div>
     <div class="preview">
       <p>No files currently selected for upload</p>
     </div>
     <div>
-      <button type="submit" value="Upload">Submit</button>
+      <button type="submit" value="Upload" id ="button2" style="visibility:hidden">Update and download</button>
     </div>
   </form>
-  <script type=text/javascript src="{{
-  url_for('static', filename='styles/upload.js') }}"></script>
-
+  <script type=text/javascript src="{{ url_for('static', filename='styles/upload.js') }}">
+  </script>
+  <script type ="text/javascript" >
+    function showButton()
+    {
+    document.getElementById ("button2").style .visibility ="visible";
+    }
+  </script>
 </body>
 </html>
