added download page with button to  download updated file

--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1 align="center">Enjoy your images!</h1>
-
+   <a href="/return-files/{{value}}" target="blank"><button class='btn btn-default'>Download</button></a>
    <a href="/"><button type="button" value="clear">Update more images</button></a>
 </body>
 </html>
