--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -15,7 +15,7 @@
       <p>No files currently selected for upload</p>
     </div>
     <div>
-      <button type="submit" value="Upload" id ="button2" style="visibility:hidden">Update and download</button>
+      <button type="submit" value="download" id ="button2" style="visibility:hidden">Update and download</button>
     </div>
   </form>
   <script type=text/javascript src="{{ url_for('static', filename='styles/upload.js') }}">
