--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,27 +1,17 @@
 body{
   background: white;
 }
+
 h1, h3{
  width: 100%;
  height: 100%;
     line-height: 150%;
 text-align: center;
- color: #16a085;
- font-family: Spartan,monospace;
-}
-button{
-    color: #ffffff;
-  background: #16a085;
-  border: none;
-  width: 508px;
-  height: 35px;
-  display: block;
-  margin: 0 auto;
-  border-radius: 4px;
-  border-bottom: 4px solid #117A60;
-  transition: all .2s ease;
-  outline: none;
-    font-family: Spartan, monospace;
+ font-weight: 300;
+margin: 0;
+font-size: 3.2em;
+color: #273849;
+font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;
 }
 form{
   position: absolute;
@@ -31,7 +21,6 @@ form{
   margin-left: -250px;
   width: 500px;
   height: 200px;
-  border: 4px dashed mintcream;
 }
 
 form ol {
@@ -44,7 +33,8 @@ form li, div > p {
   justify-content: space-between;
   margin-bottom: 10px;
   list-style-type: none;
-  color: #16a085;
+  font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+  color: #00251a;
 }
 
 form img {
@@ -58,7 +48,7 @@ form p {
 }
 
 form label, form button {
-    background-color: #16a085;
+    background-color: #006e6a;
     padding: 5px 10px;
     border-radius: 5px;
     border: 1px ridge black;
@@ -80,4 +70,16 @@ form label:active, form button:active {
   color: #0C5645;
   display: block;
   margin: 0 auto;
+}
+button content {
+align-items: center;
+color: inherit;
+display: flex;
+flex: 1 0 auto;
+justify-content: inherit;
+line-height: normal;
+position: relative;
+transition: inherit;
+    transition-property: inherit;
+transition-property: opacity;
 }
