--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image update</title>
+    <title>Image better upper</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 </head>
 <body>
-   <h1>Image update</h1>
-   <h3>Convert .jpg files to higher-resolution png</h3>
-
-   <a href="upload"><button type="button">Start</button></a>
+<div style="padding-block: 10%">
+   <h1 style="font-weight: 300;
+margin: 0;
+font-size: 3.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Image better upper</h1>
+   <h3 style="font-weight: 300;
+margin: 0;
+font-size: 2.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Give your images a glow-up</h3>
+</div>
+   <a href="upload"><button type="button"
+                            style="background: #006e6a;
+                            border-bottom: none; cursor: pointer;
+                            font-size: 25px;
+                            font-weight: 300;
+                            letter-spacing: 0.1em;
+                            min-width: 5em;
+                            text-align: center;
+                            padding: 1em 2em;
+                            border-radius: 2em;
+                            transition: all 0.15s ease;
+                            box-sizing: border-box;
+                            border: .5px solid #007e7a;
+                            font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+                            height: 3em;
+                            "
+>START</button></a>
 </body>
 </html>
