--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,13 +14,14 @@ font-size: 3.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neu
 margin: 0;
 font-size: 2.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Give your images a glow-up</h3>
 </div>
+<div style="padding-inline: 45%;">
    <a href="upload"><button type="button"
                             style="background: #006e6a;
                             border-bottom: none; cursor: pointer;
                             font-size: 25px;
                             font-weight: 300;
                             letter-spacing: 0.1em;
-                            min-width: 5em;
+                            width: auto;
                             text-align: center;
                             padding: 1em 2em;
                             border-radius: 2em;
@@ -29,7 +30,9 @@ font-size: 2.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neu
                             border: .5px solid #007e7a;
                             font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
                             height: 3em;
+                            color: white;
                             "
 >START</button></a>
+</div>
 </body>
 </html>
