cleaned up html

--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Image better upper - Download</title>
+    <script src="{{ url_for('static',filename='styles/pace.min.js') }}"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
-</head>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/loading-bar.css') }}"></head>
 <body>
 <div style="padding-block: 5%">
     <div style="padding-block: 10%">
@@ -13,42 +14,8 @@ margin: 0;
 font-size: 3.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Enjoy your images!</h1>
     </div>
     <div style="text-align: center;">
-   <a href="/" style="padding-right: 10px; padding-bottom: 10px;"><button type="button" value="clear" style="
-                                border-bottom: none; cursor: pointer;
-                                font-size: 25px;
-                                font-weight: 300;
-                                letter-spacing: 0.1em;
-                                width: auto;
-                                border-radius: 2em;
-                                transition: all 0.15s ease;
-                                font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-                                padding: 1em 2em;
-                                text-align: center;
-                                background-color: #fff;
-                                transition: all 0.15s ease;
-                                box-sizing: border-box;
-                                border: .5px solid #006e6a;
-                                height: 3em;
-                                color: #006e6a;
-                                display: inline-block;
-                                ">UPDATE MORE IMAGES</button></a>
-   <a href="/return-files/{{value}}" target="blank"><button class='btn btn-default' style=" background: #006e6a;
-                            border-bottom: none; cursor: pointer;
-                            font-size: 25px;
-                            font-weight: 300;
-                            letter-spacing: 0.1em;
-                            width: auto;
-                            text-align: center;
-                            padding: 1em 2em;
-                            border-radius: 2em;
-                            transition: all 0.15s ease;
-                            box-sizing: border-box;
-                            border: .5px solid #007e7a;
-                            font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-                            height: 3em;
-                            color: white;
-                            display: inline-block;
-">DOWNLOAD</button></a>
+   <a href="/" style="padding-right: 10px; padding-bottom: 10px;"><button type="button" value="clear" id="secondary">UPDATE MORE IMAGES</button></a>
+   <a href="/return-files/{{value}}" target="blank"><button id="primary">DOWNLOAD</button></a>
 </div>
 </div>
 </body>
