--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,33 +6,12 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 </head>
 <body>
-<div style="padding-block: 10%">
-   <h1 style="font-weight: 300;
-margin: 0;
-font-size: 3.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Image better upper</h1>
-   <h3 style="font-weight: 300;
-margin: 0;
-font-size: 2.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;">Give your images a glow-up</h3>
-</div>
-<div style="padding-inline: 45%;">
-   <a href="upload"><button type="button"
-                            style="background: #006e6a;
-                            border-bottom: none; cursor: pointer;
-                            font-size: 25px;
-                            font-weight: 300;
-                            letter-spacing: 0.1em;
-                            width: auto;
-                            text-align: center;
-                            padding: 1em 2em;
-                            border-radius: 2em;
-                            transition: all 0.15s ease;
-                            box-sizing: border-box;
-                            border: .5px solid #007e7a;
-                            font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-                            height: 3em;
-                            color: white;
-                            "
->START</button></a>
-</div>
+    <div style="text-align:center; padding-block: 10%;">
+       <h1>Image better upper</h1>
+       <h3>Give your images a glow-up</h3>
+    </div>
+    <div style="padding-inline: 45%;">
+       <a href="upload"><button type="button" id="primary">START</button></a>
+    </div>
 </body>
 </html>
