--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,17 +1,15 @@
 body{
   background: white;
 }
-
-h1, h3{
- width: 100%;
- height: 100%;
-    line-height: 150%;
-text-align: center;
- font-weight: 300;
-margin: 0;
-font-size: 3.2em;
-color: #273849;
-font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;
+h1{
+    font-weight: 300;
+    margin: 0;
+    font-size: 3.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;
+}
+h3{
+    font-weight: 300;
+    margin: 0;
+    font-size: 2.2em; color: #273849; font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif; -moz-osx-font-smoothing: grayscale;
 }
 form{
   position: absolute;
@@ -82,4 +80,60 @@ position: relative;
 transition: inherit;
     transition-property: inherit;
 transition-property: opacity;
+}
+#primary {
+    background: #006e6a;
+                            border-bottom: none; cursor: pointer;
+                            font-size: 25px;
+                            font-weight: 300;
+                            letter-spacing: 0.1em;
+                            width: auto;
+                            text-align: center;
+                            padding: 1em 2em;
+                            border-radius: 2em;
+                            transition: all 0.15s ease;
+                            box-sizing: border-box;
+                            border: .5px solid #007e7a;
+                            font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+                            height: 3em;
+                            color: white;
+}
+#secondary {
+     border-bottom: none; cursor: pointer;
+                                font-size: 25px;
+                                font-weight: 300;
+                                letter-spacing: 0.1em;
+                                width: auto;
+                                border-radius: 2em;
+                                transition: all 0.15s ease;
+                                font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+                                padding: 1em 2em;
+                                text-align: center;
+                                background-color: #fff;
+                                transition: all 0.15s ease;
+                                box-sizing: border-box;
+                                border: .5px solid #006e6a;
+                                height: 3em;
+                                color: #006e6a;
+                                display: inline-block;
+}
+#upload {
+
+                                border-bottom: none; cursor: pointer;
+                                font-size: 25px;
+                                font-weight: 400;
+                                letter-spacing: 0.1em;
+                                min-width: 5em;
+                                border-radius: 2em;
+                                transition: all 0.15s ease;
+                                font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+                                padding: 1em 2em;
+                                border-radius: 2em;
+                                display: inline-block;
+                                color: #006e6a;
+                                background-color: #fff;
+                                transition: all 0.15s ease;
+                                box-sizing: border-box;
+                                border: 1px solid #006e6a;
+
 }
