added size limit of under 2MB total for file upload

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -22,7 +22,7 @@
     UPLOAD</label></span>
       <input type="file" id="file" name="file" onchange="showButton()" accept=".jpg, .jpeg, .png" multiple>
       <div class="preview">
-        <p style="color: #6b6b6b;">No files currently selected for upload</p>
+        <p style="color: #6b6b6b;">No files currently selected for upload. Please make sure the file size total is under 2MB.</p>
       </div>
       <div>
         <button type="submit" value="download" id ="primary" style="visibility:hidden;">UPDATE</button>
